combine both sets of components - one the private linkr-components

--- a/components.html
+++ b/components.html
@@ -1,1 +1,2 @@
 <link rel="import" href="./bower_components/icebreaker/icebreaker.build.html">
+<link rel="import" href="./bower_components/linkr-components/linkr-list.build.html">
