--- a/app/main.html
+++ b/app/main.html
@@ -6,8 +6,7 @@
   <link rel="import" href="/html/components.html">
 </head>
 <body>
-  <form action="/login" method="post" autocomplete="off" is="deus-login">
-  Loading
-  </form>
+  <form action="/login" method="post" is="deus-login"></form>
+  <script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
