add page.js as a dependency for more single-page-ness - inline the scripts into the routing.html before vulcanizing again (tests coming in handy)

--- a/app/main.html
+++ b/app/main.html
@@ -6,7 +6,7 @@
   <link rel="import" href="/html/components.html">
 </head>
 <body>
-  <form action="/login" method="post" is="deus-login"></form>
+  <form action="/login" method="post" enctype="application/json" is="deus-login"></form>
   <script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
