--- a/app/main.html
+++ b/app/main.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <form action="/login" method="post" enctype="application/json" is="deus-login"></form>
+  <!-- TODO: conditionally switch to main.min.js -->
   <script type="text/javascript" src="/js/main.js"></script>
 </body>
 </html>
