--- a/app/elements.html
+++ b/app/elements.html
@@ -1,3 +1,6 @@
 <link rel="import" href="../bower_components/icebreaker/icebreaker.build.html">
 <link rel="import" href="../bower_components/deus-login/deus.build.html">
 <link rel="import" href="../bower_components/linkr-components/linkr-list.build.html">
+
+<link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
+<link rel="import" href="../bower_components/platinum-sw/platinum-sw-register.html">
