--- a/app/main.html
+++ b/app/main.html
@@ -10,4 +10,11 @@
   <!-- TODO: conditionally switch to main.min.js -->
   <script type="text/javascript" src="/js/main.js"></script>
 </body>
+<platinum-sw-register auto-register
+                      clients-claim skip-waiting
+                      on-service-worker-installed="alert">
+  <platinum-sw-cache default-cache-strategy="fastest"
+                     cache-config-file="cache-config.json">
+  </platinum-sw-cache>
+</platinum-sw-register>
 </html>
