disable service worker elements for now - a bit too unstable - but some of the logic for it is prepared in the build script at least

--- a/app/main.html
+++ b/app/main.html
@@ -10,6 +10,7 @@
   <!-- TODO: conditionally switch to main.min.js -->
   <script type="text/javascript" src="/js/main.js"></script>
 </body>
+<!-- disabled service worker elements for now
 <platinum-sw-register auto-register
                       clients-claim skip-waiting
                       on-service-worker-installed="alert">
@@ -17,4 +18,5 @@
                      cache-config-file="cache-config.json">
   </platinum-sw-cache>
 </platinum-sw-register>
+-->
 </html>
