implement ice-breaker on login page

--- a/app/main.html
+++ b/app/main.html
@@ -6,6 +6,7 @@
   <link rel="import" href="/html/components.html">
 </head>
 <body>
+  <ice-breaker></ice-breaker>
   <form action="/login" method="post" enctype="application/json" is="deus-login"></form>
   <!-- TODO: conditionally switch to main.min.js -->
   <script type="text/javascript" src="/js/main.js"></script>
