add a css pipeline

--- a/app/main.html
+++ b/app/main.html
@@ -5,6 +5,7 @@
     body { background: #666; }
     .hidden { display: none; }
   </style>
+  <link rel="stylesheet" href="/css/main.css">
   <script src="/js/webcomponents-lite.js"></script>
   <link rel="import" href="/html/components.html">
 </head>
